--- a/BlazorProject.Client/wwwroot/index.html
+++ b/BlazorProject.Client/wwwroot/index.html
@@ -1,20 +1,25 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>BlazorProject</title>
     <base href="/" />
-</head>
-<body>
-    <app>Loading...</app>
 
     <!-- Material CSS -->
     <link href="css/material.min.css" rel="stylesheet">
 
     <!-- Add Material font (Roboto) and Material icon as needed -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+<body>
+    <app>Loading...</app>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Material JS -->
@@ -25,4 +30,5 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
+
 </html>
