--- a/BlazorProject.Client/wwwroot/index.html
+++ b/BlazorProject.Client/wwwroot/index.html
@@ -8,12 +8,11 @@
     <base href="/" />
 
     <!-- Material CSS -->
-    <link href="css/material.min.css" rel="stylesheet">
+    <link href="css/bulma.min.css" rel="stylesheet">
 
     <!-- Add Material font (Roboto) and Material icon as needed -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700"
+          rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
