--- a/BlazorProject.Client/wwwroot/index.html
+++ b/BlazorProject.Client/wwwroot/index.html
@@ -10,6 +10,7 @@
     <!-- Material CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--<link href="css/bulma.min.css" rel="stylesheet">-->
+    <link href="css/site.css" rel="stylesheet">
     <!-- Add Material font (Roboto) and Material icon as needed -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700"
           rel="stylesheet">
