--- a/BlazorProject.Client/wwwroot/index.html
+++ b/BlazorProject.Client/wwwroot/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="js/scroll.js"></script>
 </head>
 
 <body id="bootstrap-overrides">
