--- a/BlazorProject.Client/wwwroot/index.html
+++ b/BlazorProject.Client/wwwroot/index.html
@@ -18,7 +18,7 @@
     <script src="js/scroll.js"></script>
 </head>
 
-<body id="bootstrap-overrides">
+<body id="bootstrap-overrides" style="overflow: hidden; position:relative">
     <app>Loading...</app>
 
 
